--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
+        "laravel/jetstream": "^2.16",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.11",
         "pestphp/pest": "^1.16",
         "pestphp/pest-plugin-laravel": "^1.1"
     },
